# Gen-AI

./: pyproject.toml  requirements.txt
Basic/Chat_model/: huiggingface.py
Basic/Embeddeing_model/: hugging_face_embeding.py
Basic/Mini_Projects/: UI_content_generation.py  descrption_anaylzer_structured_output.py  index.html  style.css
Chat_model/: app.py  chat.py  chatbot.py  localmodel.py
Descrption_Analyzer/: core.py  script.js  ui_core.py
Embeddeing_model/: googlegenai_EMBEEDING.PY  hugging_face_embeding.py
Mini_Projects/: Content_genreator.py  UI_content_generation.py  core.py
chroma-db/: chroma.sqlite3
