[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.0",
    "google-generativeai>=0.8.6",
    "gradio>=6.19.0",
    "groq>=1.5.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq",
    "langgraph>=1.2.6",
    "mistralai>=1.12.4",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=0.2.5.1",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "langchain>=1.3.11",
]
